--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-  <title>SurveyChimp</title>
+  <title>South Poll</title>
   <%= stylesheet_link_tag    'application', media: 'all', "data-turbolinks-track" => true %>
   <%= javascript_include_tag 'application', "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
@@ -21,7 +21,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">SurveyChimp :)</a>
+        <a class="navbar-brand" href="/">South Poll</a>
         <% if is_logged_in? %>
           <a class="navbar-brand" href="/users/<%= current_user.id %>"><%= current_user.username %></a>
         <% end %>
