--- a/app/views/questions/_edit_question_partial.html.erb
+++ b/app/views/questions/_edit_question_partial.html.erb
@@ -5,15 +5,15 @@
   			<form>
 			    <fieldset>
 				    <div class="radio">
-				    	<label><input type="radio" name="optradio" id="r1" value="textinput">text input</label>
+				    	<label><input type="radio" class="optradio" name="optradio" id="r1" value="textinput">text input</label>
 					</div>
 
 					<div class="radio">
-						<label><input type="radio" name="optradio" id="r2" value="multichoice">multiple choice</label>
+						<label><input type="radio" class="optradio" name="optradio" id="r2" value="multichoice">multiple choice</label>
 					</div>
 
 					<div class="radio">
-						<label><input type="radio" name="optradio" id="r3" value="chkboxes">checkboxes</label>
+						<label><input type="radio" class="optradio" name="optradio" id="r3" value="chkboxes">checkboxes</label>
 					</div>
 			    </fieldset>
 		    </form>
@@ -23,6 +23,22 @@
 
 			<div class="optradio-form" id="optradio-r1" hidden>
 				<p align="right">text input</p>
+				<form id="dummy-txtbox-form">
+					<table class="dummy-txtbox-tbl">
+						<tr>
+							<td><div class="radio"><label><input type="radio" name="txtinput-resp-short" id="txtinput-resp-short">short answer text field</label></div></td>
+						</tr>
+						<tr>
+							<td><input type="text" name="dummy-txtfield" size="61" placeholder="short and sweet"></td>
+						</tr>
+						<tr>
+							<td><div class="radio"><label><input type="radio" name="txtinput-resp-long" id="txtinput-resp-long">paragraph answer text box</label></div></td>
+						</tr>
+						<tr>
+							<td><textarea name="dummy-txtarea" form="dummy-txtbox-form" cols="60" rows="8" placeholder="the more the merrier" readonly></textarea></td>
+						</tr>
+					</table>
+				</form>
 			</div>
 
 			<div class="optradio-form" id="optradio-r2" hidden>
@@ -58,7 +74,7 @@
 						</tr>
 					</table>
 				</form>
-				<input class="submit-answer-choices" type="submit" value="save">
+				<input class="btn btn-primary submit-answer-choices" type="submit" value="save">
 			</div>
 
 		</div>
