fix width of sample text fields

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -479,3 +479,13 @@ body{
   padding-bottom: 10px;
 }
 
+.dummy-txtbox-tbl td > input {
+  border: 4px dashed pink;
+  width: 100%;
+}
+
+.dummy-txtbox-tbl td > input {
+  border: 4px dashed pink;
+  width: 100%;
+}
+
