--- a/app/views/questions/_edit_question_partial.html.erb
+++ b/app/views/questions/_edit_question_partial.html.erb
@@ -29,7 +29,7 @@
 							<td><div class="radio"><label><input type="radio" name="txtinput-resp-short" id="txtinput-resp-short">short answer text field</label></div></td>
 						</tr>
 						<tr>
-							<td><input type="text" name="dummy-txtfield" size="61" placeholder="short and sweet"></td>
+							<td><input type="text" name="dummy-txtfield" placeholder="short and sweet"></td>
 						</tr>
 						<tr>
 							<td><div class="radio"><label><input type="radio" name="txtinput-resp-long" id="txtinput-resp-long">paragraph answer text box</label></div></td>
