bind event listener to radio buttons for text input response choices

--- a/app/views/questions/_edit_question_partial.html.erb
+++ b/app/views/questions/_edit_question_partial.html.erb
@@ -26,13 +26,13 @@
 				<form id="dummy-txtbox-form">
 					<table class="dummy-txtbox-tbl">
 						<tr>
-							<td><div class="radio"><label><input type="radio" name="txtinput-resp-short" id="txtinput-resp-short">short answer text field</label></div></td>
+							<td><div class="radio"><label><input type="radio" name="txtinput-resp-short" class="txtinput-resp" id="txtinput-resp-short">short answer text field</label></div></td>
 						</tr>
 						<tr>
 							<td><input type="text" name="dummy-txtfield" placeholder="short and sweet"></td>
 						</tr>
 						<tr>
-							<td><div class="radio"><label><input type="radio" name="txtinput-resp-long" id="txtinput-resp-long">paragraph answer text box</label></div></td>
+							<td><div class="radio"><label><input type="radio" name="txtinput-resp-long" class="txtinput-resp" id="txtinput-resp-long">paragraph answer text box</label></div></td>
 						</tr>
 						<tr>
 							<td><textarea name="dummy-txtarea" form="dummy-txtbox-form" cols="60" rows="8" placeholder="the more the merrier" readonly></textarea></td>
