make adjustments to form

--- a/app/views/questions/_edit_question_partial.html.erb
+++ b/app/views/questions/_edit_question_partial.html.erb
@@ -39,6 +39,7 @@
 						</tr>
 					</table>
 				</form>
+				<input class="btn btn-primary submit-answer-choices" type="submit" value="save">
 			</div>
 
 			<div class="optradio-form" id="optradio-r2" hidden>
