write controller code to handle setting response type and answer choices

--- a/app/views/questions/_edit_question_partial.html.erb
+++ b/app/views/questions/_edit_question_partial.html.erb
@@ -8,13 +8,13 @@
 	  		<div class="resp-type-selector">
 			    <fieldset id="answer-type">
 				    <div class="radio">
-				    	<label><input type="radio" class="optradio" name="optradio" id="r1" value="textinput">text input</label>
+				    	<label><input type="radio" class="optradio" name="resp_type" id="r1" value="textinput">text input</label>
 					</div>
 					<div class="radio">
-						<label><input type="radio" class="optradio" name="optradio" id="r2" value="multichoice">multiple choice</label>
+						<label><input type="radio" class="optradio" name="resp_type" id="r2" value="multichoice">multiple choice</label>
 					</div>
 					<div class="radio">
-						<label><input type="radio" class="optradio" name="optradio" id="r3" value="chkboxes">checkboxes</label>
+						<label><input type="radio" class="optradio" name="resp_type" id="r3" value="chkboxes">checkboxes</label>
 					</div>
 			    </fieldset>
 			</div>
