write controller code to record answer choices to database

--- a/app/views/questions/_edit_question_partial.html.erb
+++ b/app/views/questions/_edit_question_partial.html.erb
@@ -28,13 +28,13 @@
 					<fieldset id="dummy-txtbox-form">
 						<table class="dummy-txtbox-tbl">
 							<tr>
-								<td><div class="radio"><label><input type="radio" name="txtinput-resp-type" class="txtinput-resp" id="txtinput-resp-short">short answer text field</label></div></td>
+								<td><div class="radio"><label><input type="radio" name="txt-answerchoice" class="txtinput-resp" id="txtinput-resp-short" value="txt-short">short answer text field</label></div></td>
 							</tr>
 							<tr>
-								<td><input type="text" name="dummy-txtfield" placeholder="short and sweet"></td>
+								<td><input type="text" name="dummy-txtfield" placeholder="short and sweet" disabled></td>
 							</tr>
 							<tr>
-								<td><div class="radio"><label><input type="radio" name="txtinput-resp-type" class="txtinput-resp" id="txtinput-resp-long">paragraph answer text box</label></div></td>
+								<td><div class="radio"><label><input type="radio" name="txt-answerchoice" class="txtinput-resp" id="txtinput-resp-long" value="txt-paragraph">paragraph answer text box</label></div></td>
 							</tr>
 							<tr>
 								<td><textarea name="dummy-txtarea" form="dummy-txtbox-form" cols="60" rows="8" placeholder="the more the merrier" readonly></textarea></td>
