set all form field response types to disable except for form fields belonging to the currently selected input type

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -436,7 +436,12 @@ body{
   top: 45px;
 }
 
-.answer-choice {
+.mc-answerchoice {
+  width: 96%;
+  float: right;
+}
+
+.ma-answerchoice {
   width: 96%;
   float: right;
 }
