--- a/app/views/questions/_edit_question_partial.html.erb
+++ b/app/views/questions/_edit_question_partial.html.erb
@@ -50,11 +50,11 @@
 						<table class="answer-choice-tbl" id="actbl1">
 							<tr>
 								<td class="numerator" id="l1">a</td>
-								<td><input class="answer-choice" type="text" name="mc-answerchoice1" placeholder="write an answer choice"></td>
+								<td><input class="mc-answerchoice" type="text" name="mc-answerchoice1" placeholder="write an answer choice"></td>
 							</tr>
 							<tr>
 								<td class="numerator" id="l2">b</td>
-								<td><input class="answer-choice" type="text" name="mc-answerchoice2" placeholder="write an answer choice"></td>
+								<td><input class="mc-answerchoice" type="text" name="mc-answerchoice2" placeholder="write an answer choice"></td>
 							</tr>
 						</table>
 					</fieldset>
@@ -67,11 +67,11 @@
 						<table class="answer-choice-tbl" id="actbl2">
 							<tr>
 								<td class="numerator" id="n1">a</td>
-								<td><input class="answer-choice" type="text" name="ma-answerchoice1" placeholder="write an answer choice"></td>
+								<td><input class="ma-answerchoice" type="text" name="ma-answerchoice1" placeholder="write an answer choice"></td>
 							</tr>
 							<tr>
 								<td class="numerator" id="n2">b</td>
-								<td><input class="answer-choice" type="text" name="ma-answerchoice2" placeholder="write an answer choice"></td>
+								<td><input class="ma-answerchoice" type="text" name="ma-answerchoice2" placeholder="write an answer choice"></td>
 							</tr>
 						</table>
 					</fieldset>
