--- a/app/views/questions/_edit_question_partial.html.erb
+++ b/app/views/questions/_edit_question_partial.html.erb
@@ -1,4 +1,4 @@
-<div id="dialog-form" title="Create new user">
+<div id="resp-type-form-box" title="Create new user">
   	
   	<div class="resp-type-container">
   		<p>set the response type:</p>
@@ -77,7 +77,7 @@
 					</fieldset>
 				</div>
 			</div>
-
+			<button class="btn btn-primary cancel-button">cancel</button>
 			<input class="btn btn-primary submit-answer-choices" type="submit" value="save">
 		</form>
 	</div>
