--- a/app/views/surveys/_add_question_partial.html.erb
+++ b/app/views/surveys/_add_question_partial.html.erb
@@ -3,6 +3,6 @@
 		<input type="hidden" name="_method" value="PUT" >
     	<input type="hidden" name="id" value=<%=@survey.id%>>
     	<input type="text" name="text" placeholder="Question">
-    	<input id="add-question-btn" type="submit" value="Add Question" >
+    	<input class="btn btn-primary btn-block" id="add-question-btn" type="submit" value="Add Question" >
     </form>
 </div>
