--- a/app/views/questions/_question_partial.html.erb
+++ b/app/views/questions/_question_partial.html.erb
@@ -1,7 +1,10 @@
 <div class="question-div">
 	<p class="question-text"><%= @new_question.text %></p>
-	<button type="submit" formaction="/surveys/<%= @new_question.survey_id %>/questions/<%= @new_question.id %>/edit" class="btn btn-primary set-resp-type-btn">response</button>
 
+  <div id="resp-type-button-div">
+    <button type="submit" formaction="/surveys/<%= @new_question.survey_id %>/questions/<%= @new_question.id %>/edit" class="btn btn-primary set-resp-type-btn">response</button>
+  </div>
+  
 	<div class="required-dropdown">
     	<button class="btn btn-primary dropdown-toggle required-dropdown-toggle" type="button" data-toggle="dropdown">required
     	<span class="caret"></span></button>
