control what happens when user sets required to true or false

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -362,6 +362,11 @@ body{
   top: 30px;
 }
 
+.required-dropdown ul li {
+  border: 2px dashed lime;
+  
+}
+
 .modal {
   background: rgba(0, 38, 77, 0.5);
 }
