--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -270,10 +270,12 @@ body{
 
 .add-question-btn {
   width: 19%;
-  height: 30px;
+  height: 35px;
   float: right;
   margin-right: 5px;
-  display: inline-flex;
+  background: none;
+  border: 3px solid #0098cc;
+  color: #0098cc;
 }
 
 .add-question-prompt-container {
@@ -344,12 +346,11 @@ body{
 
 .resp-type-status {
   border: 2px solid lime;
-  width: 180px;
-  height: 40px;
+  width: 176px;
+  height: 35px;
   display: inline;
   position: absolute;
-  right: 400px;
-  padding-top: 9px;
+  padding-top: 8px;
   text-align: center;
 }
 
@@ -543,3 +544,11 @@ body{
   left: 0px;
 }
 
+.status-container {
+  border: 2px solid red;
+  width: 180px;
+  height: 40px;
+  display: inline;
+  position: absolute;
+  right: 280px;
+}
