--- a/app/views/questions/_question_partial.html.erb
+++ b/app/views/questions/_question_partial.html.erb
@@ -1,7 +1,7 @@
-<div class="question-div" id="q-<%= @new_question.id %>">
+<div class="question-div" id="q<%= @new_question.id %>">
 	<p class="question-text"><%= @new_question.text %></p>
   <div class="status-container">
-    <p class="resp-type-status"></p>
+    <p class="resp-type-status" id="q<%= @new_question.id %>-status"></p>
   </div>
   <div id="resp-type-button-div">
     <button type="submit" formaction="/surveys/<%= @new_question.survey_id %>/questions/<%= @new_question.id %>/edit" class="btn btn-primary set-resp-type-btn" value="response">response</button>
