restyle add-question-button

--- a/app/views/questions/_new_question_partial.html.erb
+++ b/app/views/questions/_new_question_partial.html.erb
@@ -3,6 +3,6 @@
     	<input type="hidden" name="id" value=<%=@current_survey.id%>>
     	<input type="text" name="text" class="new-question-text-box" placeholder="Question" required>
     	<p>type a question...</p>
-    	<input class="btn btn-primary add-question-btn" type="submit" value="add question">
+    	<input class="btn btn-primary add-question-btn" type="submit" value="+">
     </form>
 </div>
