--- a/app/views/surveys/_edit_survey_partial.html.erb
+++ b/app/views/surveys/_edit_survey_partial.html.erb
@@ -2,6 +2,9 @@
 
 	<h3><%= @survey.title %></h3>
 
+	<div class="form-container">
+	</div>
+
 	<div class='content'>
 		<div class="add-question-prompt-container">
 			<div class="display-question-form-button">
