--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -80,8 +80,8 @@ body{
 
 #add_question {
   position: relative;
-  left: 3%;
-  width: 93%;
+  left: 2%;
+  width: 78%;
 }
 
 .question {
@@ -252,9 +252,10 @@ body{
 }
 
 .new-question-text-box {
-  border: 3px solid white;
+  border: 3px solid #0098cc;
   width: 500px;
-  background-color: rgba(240, 240, 240, 0.5) 
+  height: 36px;
+  background-color: rgba(240, 240, 240, 0.7) 
 }
 
 .new-question-form p {
@@ -262,17 +263,19 @@ body{
   display: none;
   position: absolute;
   top: 4px;
-  right: 460px;
+  right: 200px;
   font-family: 'Exo', sans-serif;
   font-weight: bold;
   color: rgba(204, 0, 0, 0.7);
 }
 
 .add-question-btn {
-  width: 5%;
-  height: 40px;
-  float: right;
-  margin-right: 5px;
+  font-size: 20px;
+  padding: 0px;
+  width: 35px;
+  height: 35px;
+  margin-left: 20px;
+  margin-top: -4px;
   background: none;
   border: 3px solid #0098cc;
   color: #0098cc;
@@ -281,8 +284,6 @@ body{
 .add-question-prompt-container {
   height: 85%;
   width: 100%;
-  position: absolute;
-  top: 65px;
 }
 
 .display-question-form-button {
@@ -294,7 +295,7 @@ body{
 
 .new-question-form {
   position: absolute;
-  top: 85px;
+  top: 3px;
   width: 100%;
 }
 
@@ -324,7 +325,10 @@ body{
 }
 
 .content {
-  height: 80%;
+  height: 77%;
+  width: 100%;
+  position: absolute;
+  top: 118px;
   overflow-y: auto;
 }
 
@@ -384,7 +388,7 @@ body{
 }
 
 .required-dropdown ul li {
-  border: 2px dashed lime;
+  
 }
 
 .modal {
@@ -517,7 +521,6 @@ body{
 .dummy-txtbox-tbl td {
   color: white;
   font-family: 'Exo', sans-serif;
-  border: 2px dotted lime;
   padding-top: 10px;
   padding-bottom: 10px;
 }
@@ -533,7 +536,6 @@ body{
 }
 
 #resp-type-submit-form {
-  border: 2px solid lime;
   width: 100%;
   height: 90%;
   position: relative;
@@ -577,4 +579,12 @@ body{
   padding-top: 8px;
   color: white;
   text-align: center;
+}
+
+.form-container {
+  position: absolute;
+  top: 45px;
+  width: 70%;
+  height: 50px;
+  right: 0px;
 }
