--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -49,6 +49,12 @@
     </div>
   </div>
 
+  <div class="row">
+    <div class="col-lg-4 col-lg-offset-3">
+      <a href="auth/linkedin/callback" class="sign-in"><img class="img-rounded oauth-bttn-size" src="/assets/linkedin.png"></a>
+    </div>
+  </div>
+
 
 
       <!-- <h2 class="form-signin-heading">Sign in with Google</h2>
